namespace Utils
{
    public static class Constants
    {
        #region tags
        public const string PLAYER = "Player";
        public const string JAM_GOAL = "JamGoal";
        public const string PEANUT_BUTTER_GOAL = "PeanutButterGoal";
        public const string BALL = "ball";
        #endregion

        #region layers

        public const string BREAD = "Bread";

        #endregion

        public const string PB_SCORE = "pbScore";
        public const string JAM_SCORE = "jamScore";
        public const string IS_JAM_BALL = "isJamBall";
    }
}